data/derived/sp14/progs/unify/prog2336.ml.out
Characters 99-109:
  in temp (f h);;
     ^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
